Fixing databases-page z-index

--- a/frontend/src/app/databases-page/databases-page.component.scss
+++ b/frontend/src/app/databases-page/databases-page.component.scss
@@ -64,13 +64,11 @@ section{
   }
 }
 
-
-
-@media only screen and (max-width: 1087px){
+@media only screen and (max-width: 1400px){
   section{
     .container{
       .row{
-        margin-left: 64px;
+        margin-left: 65px;
       }
     }
   }
@@ -86,14 +84,6 @@ section{
   }
 }
 
-@media only screen and (max-width: 820px){
-  section{
-    .container{
-      .row{
-      }
-    }
-  }
-}
 
 @media only screen and (max-width: 671px){
   section{
